# pkgsrc-wip

./: MESSAGE  Makefile  import-package.sh  oshavercd.mk
2bwm/: Makefile  PLIST  distinfo
389-ds-base/: MESSAGE  Makefile  PLIST  TODO  distinfo  options.mk
3ddesktop/: Makefile  PLIST  distinfo
4stAttack/: Makefile  PLIST  distinfo
9rc/: Makefile  PLIST  distinfo
Bear/: Makefile  PLIST  distinfo
BitchX/: Makefile  PLIST  distinfo
Box2D/: Makefile  PLIST  distinfo
CRWInfo/: Makefile  PLIST  distinfo
Cg-compiler/: Makefile  PLIST  PLIST.common  PLIST.linux-i386  PLIST.linux-x86_64  buildlink3.mk  distinfo
Chinput/: Makefile  PLIST  distinfo
Coin/: Makefile  PLIST  buildlink2.mk  buildlink3.mk  distinfo
DWB/: MESSAGE  Makefile  PLIST
DarwinStreamingServer/: MESSAGE  Makefile  PLIST  distinfo
ETL/: Makefile  PLIST  buildlink3.mk  distinfo
Eina/: Makefile  PLIST
FileManip/: Makefile  PLIST  buildlink3.mk  distinfo
FlightCrew/: Makefile  PLIST  distinfo
FontManager/: Makefile
GNUMail-pgp/: Makefile  PLIST  distinfo
GSCommander/: Makefile  PLIST  distinfo
GeoIP/: Makefile  PLIST  buildlink3.mk  distinfo
GoogleEarth/: MESSAGE  Makefile  PLIST  distinfo
GraphicsMagick/: Makefile  PLIST  buildlink3.mk  distinfo
HCL/: Makefile  PLIST  buildlink3.mk  distinfo
HLint/: Makefile  PLIST  distinfo
HSH/: Makefile  PLIST  buildlink3.mk  distinfo
HUnit/: Makefile  PLIST  buildlink3.mk  distinfo
HsHyperEstraier/: Makefile  PLIST  buildlink3.mk  distinfo
HsOpenSSL/: Makefile  PLIST  buildlink3.mk  distinfo
HsSVN/: Makefile  PLIST  buildlink3.mk  distinfo
I2util/: Makefile  PLIST  buildlink3.mk  distinfo
InfoNES/: Makefile  PLIST  distinfo  options.mk
Jcode/: PLIST  distinfo
LabPlot/: Makefile  PLIST  distinfo
LuaJIT/: Makefile  PLIST  distinfo
Lucu/: Makefile  PLIST  buildlink3.mk  distinfo
Mesa/: Makefile  Makefile.common  Makefile.lib  Makefile.version  buildlink3.mk  gnu-configure.mk  libX11-xcb.diff  version.mk
MesaLib/: Makefile  PLIST  PLIST.hppa  TODO  buildlink3.mk  builtin.mk  distinfo  dri.mk  hacks.mk  options.mk
MesaLib-dri/: MESSAGE  Makefile  MesaLib-replacement_buildlink3.mk  PLIST  buildlink3.mk  distinfo  options.mk  pkgsrc-mesa.diff  subst.mk
MissingH/: Makefile  PLIST  buildlink3.mk  distinfo
MoleInvasion/: Makefile  PLIST  distinfo
MozillaFirebird-bin-xft2/: Makefile  Makefile.Linux.i386  distinfo
MyServer/: Makefile  PLIST  PLIST.control  distinfo  options.mk
NeoPop-SDL/: Makefile  PLIST  distinfo
OdfConverter/: Makefile  PLIST  distinfo
OmegaT-bin/: Makefile  PLIST  distinfo
OmegaT-devel-bin/: Makefile  PLIST  distinfo
OpenGLUT/: Makefile  PLIST  buildlink3.mk  distinfo
PHPUnit/: Makefile  distinfo  options.mk
PPower4/: Makefile  PLIST  distinfo
alex/patches/: patch-aa  patch-alex.cabal
hs-Lucu/patches/: patch-Lucu.cabal  patch-Network_HTTP_Lucu_Chunk.hs
hs-ascii/patches/: patch-ascii.cabal
hs-blaze-builder/patches/: patch-blaze-builder.cabal
hs-hxt/patches/: patch-aa  patch-hxt.cabal
ldapuseradd/work/ldapuseradd-0.9.2/: COPYING  ChangeLog  Makefile  Makefile.in  TODO  TODO.sh  config.h  config.h.in  config.status  configure  configure.in  configure.lineno  ldapuseradd.html
ldapuseradd/work/ldapuseradd-0.9.2/conf/: groups.ldap  ldapuseradd-large.conf  ldapuseradd.conf  users.ldap
ldapuseradd/work/ldapuseradd-0.9.2/debian/: changelog  conffiles  control  copyright  rules
ldapuseradd/work/ldapuseradd-0.9.2/man5/: Makefile  Makefile.in  groups.ldap.5  groups.ldap.cat5  ldapuseradd.conf.5  ldapuseradd.conf.cat5  users.ldap.5  users.ldap.cat5
ldapuseradd/work/ldapuseradd-0.9.2/man8/: Makefile  Makefile.in  ldapgroupadd.8  ldapgroupadd.cat8  ldapgroupdel.8  ldapgroupdel.cat8  ldapgroupmod.8  ldapgroupmod.cat8  ldapuseradd.8  ldapuseradd.cat8  ldapuserdel.8  ldapuserdel.cat8  ldapusermod.8  ldapusermod.cat8
ldapuseradd/work/ldapuseradd-0.9.2/src/: Makefile  Makefile.in  account.h  argv.h  argv_groupadd.c  argv_groupdel.c  argv_groupmod.c  argv_useradd.c  argv_userdel.c  argv_usermod.c  configfile.c  configfile.h  getopt.c  getopt.h  getopt1.c  ldapuseradd  ldapuseradd.c  ldapuseradd.h  userstate.c  userstate.h
ldapuseradd/work/ldapuseradd-0.9.2/src/api/: chmod.c  chmod.h  chown.c  chown.h  functions.c  functions.h  mkdir.c  mkdir.h  pwgen.c  pwgen.h  rmdir.c  rmdir.h  str.c  str.h  wc.c  wc.h
ldapuseradd/work/ldapuseradd-0.9.2/src/hooks/: Makefile  Makefile.in  hook_home.c  hook_mail.c  hook_script.c  hook_sql.c  hook_web.c  hooks.h
ldapuseradd/work/ldapuseradd-0.9.2/src/ldap/: ldap_core.c  ldap_group.c  ldap_groups.c  ldap_nss.c  ldap_user.c  ldapapi.h
ldapuseradd/work/ldapuseradd-0.9.2/util/: groups.ldap.5.xml  ldapgroupadd.8.xml  ldapgroupdel.8.xml  ldapgroupmod.8.xml  ldapuseradd.8.xml  ldapuseradd.conf.5.xml  ldapuserdel.8.xml  ldapusermod.8.xml  users.ldap.5.xml
(+37184 files in other folders)
