$NetBSD$

The version of hxt has been bumped to 9.2.*

--- Lucu.cabal.orig	2011-09-04 12:13:49.000000000 +0000
+++ Lucu.cabal
@@ -53,7 +53,7 @@ Library
         filepath             == 1.2.*,
         directory            == 1.1.*,
         haskell-src          == 1.0.*,
-        hxt                  == 9.1.*,
+        hxt                  == 9.2.*,
         mtl                  == 2.0.*,
         network              == 2.3.*,
         stm                  == 2.2.*,
