$NetBSD$

* case-insensitive 0.4.* works as well.

--- ascii.cabal.orig	2011-10-28 02:55:37.000000000 +0000
+++ ascii.cabal
@@ -16,5 +16,5 @@ Library
                      , bytestring       >= 0.9           && < 0.10
                      , text             >= 0.11          && < 0.12
                      , blaze-builder    >= 0.2.1.4       && < 0.4
-                     , case-insensitive >= 0.2           && < 0.4
+                     , case-insensitive >= 0.2           && < 0.5
   Ghc-options:         -Wall
