$NetBSD$

HUnit seems not to be used at all!

--- hxt.cabal.orig	2012-10-15 09:02:47.000000000 +0000
+++ hxt.cabal
@@ -182,7 +182,6 @@ library
                 directory  >= 1   && < 2,
                 filepath   >= 1   && < 2,
                 parsec     >= 2.1 && < 4,
-                HUnit      >= 1.2 && < 2,
                 mtl        >= 2   && < 3,
                 network    >= 2.4 && < 3,
                 deepseq    >= 1.1 && < 2,
