dnl Fix me I'm badly written!
dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/ldapuseradd.c)
#AC_CONFIG_AUX_DIR(util)
AC_PREFIX_DEFAULT(/usr/local)

#echo > config.h.in

echo -n "checking host operating system... "
HOSTOS=`uname -s 2> /dev/null`
echo "$HOSTOS"

echo -n "checking host arch... "
HOSTARCH=`uname -m 2> /dev/null`
echo "$HOSTARCH"

echo -n "checking system version... "
HOSTREL=`uname -r 2> /dev/null`
echo "$HOSTREL"

dnl Use if it is an error not to find a program.
AC_DEFUN(ENSURE_PATH_PROG, [
    AC_PATH_PROG($1, $2)
    if test -z "${$1}" ; then
        AC_MSG_ERROR($2 was not found in path and is required)
    fi
#    else
#    echo '#define' $1 "\"${$1}\"" >> config.h.in
])

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC

ENSURE_PATH_PROG(MYSQL, mysql)
ENSURE_PATH_PROG(XARGS, xargs)
ENSURE_PATH_PROG(FIND, find)
ENSURE_PATH_PROG(STTY, stty)
ENSURE_PATH_PROG(RM, rm)
ENSURE_PATH_PROG(CP, cp)
ENSURE_PATH_PROG(CHGRP, chgrp)
ENSURE_PATH_PROG(CHOWN, chown)
ENSURE_PATH_PROG(CHMOD, chmod)

dnl ##  fix installation paths
test "x$prefix" = xNONE && prefix=$ac_default_prefix
#eval "dir=$prefix"
CONFIG_DIR=$prefix/etc/ldapuseradd
LIB_DIR=$prefix/lib/ldapuseradd
BIN_DIR=$prefix/sbin
MAN_DIR=$prefix/man

AC_DEFUN(GETVAL, [
def=${$1}; export def
AC_ARG_WITH($1,
[  --with-$1=value		$2. default: $def ],
    [$1=${with_$1}; export $1])
])

AC_DEFUN(SETVAL, [
CFLAGS="$CFLAGS -D$1='\"${$1}\"'"
export CFLAGS
])

dnl Checks for libraries.
AC_SUBST(CFLAGS)
AC_SUBST(HOSTOS)
AC_SUBST(HOSTARCH)
AC_SUBST(HOSTREL)
AC_SUBST(MYSQL)
AC_SUBST(XARGS)
AC_SUBST(FIND)
AC_SUBST(STTY)
AC_SUBST(RM)
AC_SUBST(CP)
AC_SUBST(CHGRP)
AC_SUBST(CHOWN)
AC_SUBST(CHMOD)
AC_SUBST(CONFIG_DIR)
AC_SUBST(LIB_DIR)
AC_SUBST(BIN_DIR)
AC_SUBST(MAN_DIR)

dnl Checks for header files.
dnl AC_HEADER_STDC
dnl AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(dirent.h)
AC_CHECK_HEADERS(errno.h)
AC_CHECK_HEADERS(fcntl.h)
AC_CHECK_HEADERS(pwd.h)
AC_CHECK_HEADERS(signal.h)
AC_CHECK_HEADERS(stdarg.h)
AC_CHECK_HEADERS(stdio.h)
AC_CHECK_HEADERS(sys/stat.h)
AC_CHECK_HEADERS(sys/types.h)


dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_UID_T

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(select strerror strstr)

AC_OUTPUT(config.h Makefile src/Makefile src/hooks/Makefile man5/Makefile man8/Makefile)

